[gd_scene load_steps=3 format=3 uid="uid://b21vgcbjm1rcw"]

[ext_resource type="Script" uid="uid://boum7i3dt6uil" path="res://addons/Ds_levels/ui/popups/add_level_popup.gd" id="1_mux0t"]
[ext_resource type="PackedScene" uid="uid://dvd6im2at4f60" path="res://addons/Ds_levels/ui/file_picker.tscn" id="2_y1k72"]

[node name="add_level_popup" type="VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
offset_right = 547.0
offset_bottom = 117.0
alignment = 1
script = ExtResource("1_mux0t")

[node name="level_label_input" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Label..."

[node name="level_path_picker" parent="." instance=ExtResource("2_y1k72")]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "path..."
start_path = ""

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 82
alignment = 1

[node name="cancel_button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="accept_button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Accept
"

[connection signal="cancled" from="level_path_picker" to="." method="_on_level_path_picker_cancled"]
[connection signal="path_selected" from="level_path_picker" to="." method="_on_level_path_picker_path_selected"]
[connection signal="pressed" from="HBoxContainer/cancel_button" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="HBoxContainer/accept_button" to="." method="_on_accept_button_pressed"]
